src/cpp/gde_c_interface.h

GDE_EXPORT void gde_init_c_interface(GDExtensionInterfaceGetProcAddress p_get_proc_address);
GDE_EXPORT void gde_get_library_path(GDExtensionClassLibraryPtr p_library, GDExtensionUninitializedStringPtr r_path);
GDE_EXPORT void gde_print_error(const char *p_description, const char *p_function, const char *p_file, int32_t p_line,
                                GDExtensionBool p_editor_notify);
GDE_EXPORT void gde_print_warning(const char *p_description, const char *p_function, const char *p_file, int32_t p_line,
                                  GDExtensionBool p_editor_notify);
GDE_EXPORT void *gde_mem_alloc(size_t p_bytes);
GDE_EXPORT GDExtensionPtrConstructor gde_variant_get_ptr_constructor(GDExtensionVariantType p_type,
                                                                     int32_t p_constructor);
GDE_EXPORT GDExtensionPtrDestructor gde_variant_get_ptr_destructor(GDExtensionVariantType p_type);
GDE_EXPORT void gde_variant_new_copy(GDExtensionUninitializedVariantPtr r_dest, GDExtensionConstVariantPtr p_src);
GDE_EXPORT void gde_variant_new_nil(GDExtensionUninitializedVariantPtr r_dest);
GDE_EXPORT GDExtensionPtrBuiltInMethod gde_variant_get_ptr_builtin_method(GDExtensionVariantType p_type,
                                                                          GDExtensionConstStringNamePtr p_method,
                                                                          GDExtensionInt p_hash);
GDE_EXPORT GDExtensionVariantFromTypeConstructorFunc
gde_get_variant_from_type_constructor(GDExtensionVariantType p_type);
GDE_EXPORT GDExtensionTypeFromVariantConstructorFunc gde_get_variant_to_type_constructor(GDExtensionVariantType p_type);