src/dart/godot_dart/lib/src/core/gdextension_ffi_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class GDExtensionFFI {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GDExtensionFFI(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GDExtensionFFI.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void __va_start(
    ffi.Pointer<va_list> arg0,
  ) {
    return ___va_start(
      arg0,
    );
  }

  late final ___va_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<va_list>)>>(
          '__va_start');
  late final ___va_start =
      ___va_startPtr.asFunction<void Function(ffi.Pointer<va_list>)>();

  void __security_init_cookie() {
    return ___security_init_cookie();
  }

  late final ___security_init_cookiePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          '__security_init_cookie');
  late final ___security_init_cookie =
      ___security_init_cookiePtr.asFunction<void Function()>();

  void __security_check_cookie(
    int _StackCookie,
  ) {
    return ___security_check_cookie(
      _StackCookie,
    );
  }

  late final ___security_check_cookiePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          '__security_check_cookie');
  late final ___security_check_cookie =
      ___security_check_cookiePtr.asFunction<void Function(int)>();

  void __report_gsfailure(
    int _StackCookie,
  ) {
    return ___report_gsfailure(
      _StackCookie,
    );
  }

  late final ___report_gsfailurePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          '__report_gsfailure');
  late final ___report_gsfailure =
      ___report_gsfailurePtr.asFunction<void Function(int)>();

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie =
      _lookup<ffi.UintPtr>('__security_cookie');

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  void _invalid_parameter_noinfo() {
    return __invalid_parameter_noinfo();
  }

  late final __invalid_parameter_noinfoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          '_invalid_parameter_noinfo');
  late final __invalid_parameter_noinfo =
      __invalid_parameter_noinfoPtr.asFunction<void Function()>();

  void _invalid_parameter_noinfo_noreturn() {
    return __invalid_parameter_noinfo_noreturn();
  }

  late final __invalid_parameter_noinfo_noreturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          '_invalid_parameter_noinfo_noreturn');
  late final __invalid_parameter_noinfo_noreturn =
      __invalid_parameter_noinfo_noreturnPtr.asFunction<void Function()>();

  void _invoke_watson(
    ffi.Pointer<ffi.WChar> _Expression,
    ffi.Pointer<ffi.WChar> _FunctionName,
    ffi.Pointer<ffi.WChar> _FileName,
    int _LineNo,
    int _Reserved,
  ) {
    return __invoke_watson(
      _Expression,
      _FunctionName,
      _FileName,
      _LineNo,
      _Reserved,
    );
  }

  late final __invoke_watsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.WChar>,
              ffi.Pointer<ffi.WChar>,
              ffi.Pointer<ffi.WChar>,
              ffi.UnsignedInt,
              ffi.UintPtr)>>('_invoke_watson');
  late final __invoke_watson = __invoke_watsonPtr.asFunction<
      void Function(ffi.Pointer<ffi.WChar>, ffi.Pointer<ffi.WChar>,
          ffi.Pointer<ffi.WChar>, int, int)>();

  ffi.Pointer<ffi.Int> _errno() {
    return __errno();
  }

  late final __errnoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int> Function()>>('_errno');
  late final __errno = __errnoPtr.asFunction<ffi.Pointer<ffi.Int> Function()>();

  int _set_errno(
    int _Value,
  ) {
    return __set_errno(
      _Value,
    );
  }

  late final __set_errnoPtr =
      _lookup<ffi.NativeFunction<errno_t Function(ffi.Int)>>('_set_errno');
  late final __set_errno = __set_errnoPtr.asFunction<int Function(int)>();

  int _get_errno(
    ffi.Pointer<ffi.Int> _Value,
  ) {
    return __get_errno(
      _Value,
    );
  }

  late final __get_errnoPtr =
      _lookup<ffi.NativeFunction<errno_t Function(ffi.Pointer<ffi.Int>)>>(
          '_get_errno');
  late final __get_errno =
      __get_errnoPtr.asFunction<int Function(ffi.Pointer<ffi.Int>)>();

  int __threadid() {
    return ___threadid();
  }

  late final ___threadidPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedLong Function()>>('__threadid');
  late final ___threadid = ___threadidPtr.asFunction<int Function()>();

  int __threadhandle() {
    return ___threadhandle();
  }

  late final ___threadhandlePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function()>>('__threadhandle');
  late final ___threadhandle = ___threadhandlePtr.asFunction<int Function()>();

  void gde_init_c_interface(
    GDExtensionInterfaceGetProcAddress p_get_proc_address,
  ) {
    return _gde_init_c_interface(
      p_get_proc_address,
    );
  }

  late final _gde_init_c_interfacePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionInterfaceGetProcAddress)>>('gde_init_c_interface');
  late final _gde_init_c_interface = _gde_init_c_interfacePtr
      .asFunction<void Function(GDExtensionInterfaceGetProcAddress)>();

  void gde_get_library_path(
    GDExtensionClassLibraryPtr p_library,
    GDExtensionUninitializedStringPtr r_path,
  ) {
    return _gde_get_library_path(
      p_library,
      r_path,
    );
  }

  late final _gde_get_library_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(GDExtensionClassLibraryPtr,
              GDExtensionUninitializedStringPtr)>>('gde_get_library_path');
  late final _gde_get_library_path = _gde_get_library_pathPtr.asFunction<
      void Function(
          GDExtensionClassLibraryPtr, GDExtensionUninitializedStringPtr)>();

  void gde_print_error(
    ffi.Pointer<ffi.Char> p_description,
    ffi.Pointer<ffi.Char> p_function,
    ffi.Pointer<ffi.Char> p_file,
    int p_line,
    int p_editor_notify,
  ) {
    return _gde_print_error(
      p_description,
      p_function,
      p_file,
      p_line,
      p_editor_notify,
    );
  }

  late final _gde_print_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              GDExtensionBool)>>('gde_print_error');
  late final _gde_print_error = _gde_print_errorPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, int)>();

  void gde_print_warning(
    ffi.Pointer<ffi.Char> p_description,
    ffi.Pointer<ffi.Char> p_function,
    ffi.Pointer<ffi.Char> p_file,
    int p_line,
    int p_editor_notify,
  ) {
    return _gde_print_warning(
      p_description,
      p_function,
      p_file,
      p_line,
      p_editor_notify,
    );
  }

  late final _gde_print_warningPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              GDExtensionBool)>>('gde_print_warning');
  late final _gde_print_warning = _gde_print_warningPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, int)>();

  ffi.Pointer<ffi.Void> gde_mem_alloc(
    int p_bytes,
  ) {
    return _gde_mem_alloc(
      p_bytes,
    );
  }

  late final _gde_mem_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Size)>>(
          'gde_mem_alloc');
  late final _gde_mem_alloc =
      _gde_mem_allocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  GDExtensionPtrConstructor gde_variant_get_ptr_constructor(
    int p_type,
    int p_constructor,
  ) {
    return _gde_variant_get_ptr_constructor(
      p_type,
      p_constructor,
    );
  }

  late final _gde_variant_get_ptr_constructorPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionPtrConstructor Function(
              ffi.Int32, ffi.Int32)>>('gde_variant_get_ptr_constructor');
  late final _gde_variant_get_ptr_constructor =
      _gde_variant_get_ptr_constructorPtr
          .asFunction<GDExtensionPtrConstructor Function(int, int)>();

  GDExtensionPtrDestructor gde_variant_get_ptr_destructor(
    int p_type,
  ) {
    return _gde_variant_get_ptr_destructor(
      p_type,
    );
  }

  late final _gde_variant_get_ptr_destructorPtr =
      _lookup<ffi.NativeFunction<GDExtensionPtrDestructor Function(ffi.Int32)>>(
          'gde_variant_get_ptr_destructor');
  late final _gde_variant_get_ptr_destructor =
      _gde_variant_get_ptr_destructorPtr
          .asFunction<GDExtensionPtrDestructor Function(int)>();

  void gde_variant_new_copy(
    GDExtensionUninitializedVariantPtr r_dest,
    GDExtensionConstVariantPtr p_src,
  ) {
    return _gde_variant_new_copy(
      r_dest,
      p_src,
    );
  }

  late final _gde_variant_new_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(GDExtensionUninitializedVariantPtr,
              GDExtensionConstVariantPtr)>>('gde_variant_new_copy');
  late final _gde_variant_new_copy = _gde_variant_new_copyPtr.asFunction<
      void Function(
          GDExtensionUninitializedVariantPtr, GDExtensionConstVariantPtr)>();

  void gde_variant_new_nil(
    GDExtensionUninitializedVariantPtr r_dest,
  ) {
    return _gde_variant_new_nil(
      r_dest,
    );
  }

  late final _gde_variant_new_nilPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              GDExtensionUninitializedVariantPtr)>>('gde_variant_new_nil');
  late final _gde_variant_new_nil = _gde_variant_new_nilPtr
      .asFunction<void Function(GDExtensionUninitializedVariantPtr)>();

  GDExtensionPtrBuiltInMethod gde_variant_get_ptr_builtin_method(
    int p_type,
    GDExtensionConstStringNamePtr p_method,
    int p_hash,
  ) {
    return _gde_variant_get_ptr_builtin_method(
      p_type,
      p_method,
      p_hash,
    );
  }

  late final _gde_variant_get_ptr_builtin_methodPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionPtrBuiltInMethod Function(
              ffi.Int32,
              GDExtensionConstStringNamePtr,
              GDExtensionInt)>>('gde_variant_get_ptr_builtin_method');
  late final _gde_variant_get_ptr_builtin_method =
      _gde_variant_get_ptr_builtin_methodPtr.asFunction<
          GDExtensionPtrBuiltInMethod Function(
              int, GDExtensionConstStringNamePtr, int)>();

  GDExtensionVariantFromTypeConstructorFunc
      gde_get_variant_from_type_constructor(
    int p_type,
  ) {
    return _gde_get_variant_from_type_constructor(
      p_type,
    );
  }

  late final _gde_get_variant_from_type_constructorPtr = _lookup<
      ffi.NativeFunction<
          GDExtensionVariantFromTypeConstructorFunc Function(
              ffi.Int32)>>('gde_get_variant_from_type_constructor');
  late final _gde_get_variant_from_type_constructor =
      _gde_get_variant_from_type_constructorPtr.asFunction<
          GDExtensionVariantFromTypeConstructorFunc Function(int)>();

  GDExtensionTypeFromVariantConstructorFunc gde_get_variant_to_type_constructor(
    int p_type,
  ) {
    return _gde_get_variant_to_type_constructor(
      p_type,
    );
  }
